css/popup.css
/* ... */
.popup #photo_img_holder {
	width: 260px;
	height: 260px;
}

.popup #photo_img_holder {
	position: relative;
	background: #222222;
	overflow: hidden;
}

.popup #photo_img_holder img{
	width: 100%;
}

.popup #photo_desc_holder {
	position: absolute;
	bottom: 0;
	width: 100%;
	padding: 0 0 0 5%;
	background: rgba(0,0,0, .6);
}

.lt-ie9 #photo_desc_holder{
	background: url('../img/assets/black-opacity-70.png');
}

.popup #photo_desc_holder h3{	
	font-size: 14px;
	padding: 5px 0 0;
	line-height: 0;
	color: #1bd1ff;
}

.popup #photo_desc_holder p{
	display: inline-block;
	margin: 0;
	padding: 5px 0 15px;
	color: #FFF;
}

.popup.instagram#popup_photo #photo_desc_holder p{
	width: 94%;
}

.popup #ico_instagram{
	display: inline-block;
	width: 26px;
	height: 26px;
	margin: 0 20px 9px 0px;	
	float:right;
	background-image: url('../img/popups/icons/ico-instagram.png');
}

@media only screen and (min-width: 480px)  {
	.popup #ico_instagram{
		margin: 0 0 8px 3px;
	}
}

@media only screen and (min-width: 640px)  {
	.popup #ico_instagram{
		float:none;
		margin: 0 0 2px 3px;
	}
}

.popup #photo_footer {
	height: 60px;
	background: #FFFFFF;
}

/*Twitter*/
.popup#popup_twitter {
	width: 240px;
	height: 240px;
	padding: 10px 10px 0;
	font: 18px/26px Helvetica, Arial, sans-serif;
	color: #FFFFFF;
	background: #00ccff;
}

.popup#popup_twitter table{
	text-align: left;
}

.popup#popup_twitter img {
	width: 48px;
	height: 48px;
	margin: 0 15px 15px 0 ;
}
.popup#popup_twitter h4{
	font-size: 24px;
	margin: 0;
}

.popup#popup_twitter span{
	display: block;
	font-size: 12px;
	line-height: 24px;
}

/*Video*/
.popup#popup_video{
	width: 256px;
}

.popup#popup_video #popup_video_holder {
	position: relative;
	height: 144px;
	background: #00Ff00;
}

.popup #popup_video_footer h1{
	font-size:16px;
	line-height: 18px;
	margin: 10px 0 0 15px; 
}

.popup #popup_video_footer p{
	display: inline-block;
	width: 90%;
	margin: 10px 0 0 15px; 
	font-size: 12px;
	line-height: 14px;
}

.popup #popup_footer_share {
	border-left: 2px #999999 solid;
}

/*Photo upload*/
.popup#popup_photo_upload {
	width: 300px;
	height: 435px;
	font: 11px/14px Helvetica, Arial, sans-serif;
}

.popup#popup_photo_upload .popup_round_button {
	width: 75px;
}

.popup #popup_photo_upload_agreement_window {
	position: absolute;
	width: 84%;
	height: 100%;
	padding: 0 8%;
	background: #f38dab;
	color:#FFF;
	z-index: 2;
}

.popup #popup_photo_upload_agreement_window h2 {
	margin: 10px 0 5px;
	font-size: 11px;
}

.popup #popup_photo_upload_agreement_window a {
	color: #FFFFFF;
	text-decoration: underline;	
}

.popup #popup_photo_upload_agreement_window ul {
	margin-left: 15px;
}

.popup #popup_photo_upload_agreement_window ul li{
	line-height: 14px;
}

.popup #popup_photo_upload_agreement_window #button_wrapper{	
	width:100%; 
	margin-top: 30px;
	text-align:center;
} 

.popup #popup_photo_upload_preview_window {
	position: absolute;
	width: 96%;
	height: 100%;
	padding: 0 2%;	
}

.popup #popup_photo_upload_preview_window h2 {
	text-align: center;
}

.popup #popup_photo_upload_preview_window form{
	margin: 0;
	padding: 0;
}

.popup #popup_photo_img_holder {
	position: relative;
	width: 260px;
	height: 260px;
	margin: 0 auto;
	border: 2px #aeaeae dashed;
	text-align: center;
	background: #f2f2f2;
}

.popup #popup_photo_img_holder #message {
	position: absolute;
	margin: 16% auto 0;
}

.popup #popup_photo_img_holder #message p{
	display: block;		
	margin: 20px 10%;
}

.popup #popup_photo_img_holder #holder{
	position: absolute;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.popup #popup_photo_img_holder #holder.scroll_x{
	cursor: ew-resize;
}

.popup #popup_photo_img_holder #holder.scroll_y{
	cursor: ns-resize;
}

.lt-ie9 .popup #popup_photo_img_holder #holder.scroll_x{
	cursor: e-resize;
}

.lt-ie9 .popup #popup_photo_img_holder #holder.scroll_y{
	cursor: n-resize;
}

.popup #popup_photo_img_holder #anim_loading{
	position: absolute;
	display: none;
	width: 32px;
	height: 32px;
	margin-left: -16px;
	padding: 4px;
	left: 128px;
	top: 110px;
	background: #f38dab url('../img/popups/icons/anim-loader.gif') no-repeat center center;
	z-index: 2;
	-webkit-border-radius:5px;
	   -moz-border-radius:5px;
		 -o-border-radius:5px;
			border-radius:5px;
}

.popup #popup_photo_img_holder #holder img, .popup #popup_photo_img_holder #holder canvas {
	position: absolute;
	display: block;
}

.popup #popup_photo_desc_holder {
	width: 98%;
	height: 45px;
	margin: 12px 0;
	padding: 1%;
	text-align: center;
	background: #f2f2f2;
}

.popup #popup_photo_desc_holder textarea {
	width: 95%;
	min-height: 40px;
	max-height: 40px;
	border-style: none; 
    border-color: Transparent;
	resize: none;
	color: #222222;
	background: #f2f2f2;
    -webkit-box-shadow: none;
       -moz-box-shadow: none;	
    	 -o-box-shadow: none;	
 			box-shadow: none;
}

.popup #popup_photo_desc_holder .greyfont {
	color: #777;
}

.popup #popup_photo_upload_preview_window #button_wrapper{
	text-align: center;
}

.popup #popup_photo_upload_preview_window input[type="file"]{
	width: 200px;
}

/*Circle*/
.popup#popup_circle{
	position: fixed;
	width: 100%;
	left: 0;
	min-height: 100px;
	background-image: url('../img/assets/bg-pattern.png');
	opacity: 0;
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity=0);
    zoom: 1;
}

/*.popup#popup_circle .btn_edit, .popup#popup_circle .btn_add_photo{	
	font-size: .7em !important;
	height: 28px;
}*/

.popup#popup_circle .btn_edit {
	float: left;
}

.popup #popup_circle_detail_holder{
	position: relative;
	max-width: 100%;
	/*height: 100%;*/
	padding: 30px 30px 60px 30px;
}

.popup#popup_circle .btn_close{
	float: right;
	width: 50px;
	height: 50px;
	background: url('../img/popups/buttons/btn_pink_close.png') no-repeat 0 top;
	cursor: pointer;
}

.popup#popup_circle .btn_close:hover{
	background-position: 0 bottom;
}
/* ... */

